# Camera-Monitoring-Suite-AI_CV

./: README.md
TitSmartDashboard/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  config.ini  main.cpp
TitSmartDashboardBackend/: .gitignore  README.md  ai_config.json  binding.gyp  detect_plasma.py  detect_plasma.spec  detect_rat.py  main.js  mediamtx.yml  nodemon.json  package-lock.json  package.json  test.js  test_webrtc.js  tsconfig.json
TitSmartDashboardBackend/public/: index.html  webrtc.html
TitSmartDashboardBackend/public/css/: app.33622f55.css  dashboard.7490d11b.css  dashboard.cad8e8ca.css
TitSmartDashboardBackend/public/js/: app.0f958882.js  app.0f958882.js.map  app.4428c1e9.js  app.4428c1e9.js.map  app.c0605ad9.js  app.c0605ad9.js.map  chunk-vendors.2824d7af.js  (+6 more)
TitSmartDashboardBackend/src/: index.ts
TitSmartDashboardWeb/: .aider.chat.history.md  .aider.input.history  package-lock.json  package.json
TitSmartDashboardWeb/src/: App.tsx  index.css
TitSmart_Windows/: .gitignore  Dockerfile  docker-compose.yml
TitSmart_Windows/TitSmartDashboardBackend/: ai_config.json  binding.gyp  detect_plasma.spec  main.js  mediamtx.yml.bak  package-lock.json  package.json  run_video.sh  start_server.sh  test_stream.js  tsconfig.json
TitSmart_Windows/TitSmartDashboardWeb/: index.html  package-lock.json  postcss.config.js  tailwind.config.js  vite.config.ts
TitSmart_Windows/TitSmart_client/: .gitignore  README.md  package-lock.json
TitSmart_Windows/doc/: Open Source Software Licenses-HCNetSDK.txt
TitSmart_Windows/profile_readme/: README.md
(+58 files in other folders)
